--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^3.12.0",
     "next": "^15.1.6",
     "pdf-lib": "^1.17.1",
+    "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "regenerator-runtime": "^0.14.1",
