--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "dotenv": "^16.4.7",
     "fontkit": "^2.0.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jszip": "^3.10.1",
     "mysql2": "^3.12.0",
     "next": "^15.1.6",
